# arc-one-manifest-tools

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  manifest-pr-preview.yml  manifest-register.yml
arc_one_manifest/: __init__.py  canonical.py  cli.py  gate.py  infra_binding.py  loader.py  material_paths.py  register.py
arc_one_manifest/intelligence/: __init__.py  audit.py  catalog.py  generate.py  generate_models.py  generate_synthesizer.py  git_diff.py  judge.py  manifest_summary.py  models.py  platform_report.py  profiles.py  reporter.py  verdict.py
arc_one_manifest/intelligence/extractors/: __init__.py  env_example.py  env_names.py  http_urls.py  python_ast.py  python_deps.py  typescript_env.py
arc_one_manifest/intelligence/prompts/: audit_judge_v1.txt  generate_synthesizer_v1.txt
arc_one_manifest/validation/: __init__.py  madre_v11.py
docs/: CONECTAR_TU_REPO.md  INTEGRATION.md  MANIFEST_INTELLIGENCE.md  SCHEMA.md
scripts/: e2e_smoke.py  run_audit_scenarios.py
setup/: action.yml
tests/: test_audit.py  test_audit_scenarios.py  test_env_names.py  test_generate.py  test_generate_synthesizer.py  test_http_urls.py  test_infra_binding.py  test_infra_binding_yaml_roundtrip.py  test_judge.py  test_manifest_summary_parity.py  test_platform_judge.py  test_platform_report.py  test_register_v12.py  test_verdict.py  test_version.py
tests/fixtures/: manifest_summary_parity.json
tests/fixtures/audit_scenarios/: _base_manifest.yaml
tests/fixtures/audit_scenarios/clean-banking/: arc-one.agent.yaml  expected.yaml  requirements.txt
(+28 files in other folders)
