[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arc-one-manifest"
version = "1.3.1"
description = "CLI and validation library for Arc One agent manifests (MADRE v1.1 / v1.2)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Arc One Assurance" }]
dependencies = [
  "httpx>=0.27",
  "pyyaml>=6.0",
]

[project.scripts]
arc-one-manifest = "arc_one_manifest.cli:main"

[project.urls]
Homepage = "https://github.com/arc-one-assurance/arc-one-manifest-tools"
Documentation = "https://github.com/arc-one-assurance/arc-one-manifest-tools/blob/main/docs/INTEGRATION.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["arc_one_manifest*"]
